--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #configuracion de MariaDB
-spring.datasource.url=jdbc:mariadb://localhost:3306/persona_db
+spring.datasource.url=jdbc:mariadb://${DATABASE_URL:localhost}:3306/persona_db
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
